Complete JDK 21 + Spring Boot integration with ZGC optimization
Co-authored-by: ygmpkk <1000414+ygmpkk@users.noreply.github.com>